--- a/css/style.css
+++ b/css/style.css
@@ -240,8 +240,8 @@
 }
 
 #logo2 {
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
 }
 
 #imagentip {
@@ -764,6 +764,14 @@ p {
     #textovideo {
         font-size: 22px;
     }
+    #logo2 {
+        width: 300px !important;
+        height: 300px !important;
+    }
+    #textovideo {
+        margin-top: 50px !important;
+        margin-bottom: 25px !important;
+    }
     body {
         font-size: 15px;
     }
@@ -848,6 +856,8 @@ p {
         width: 50px;
     }
 }
+
+
 
 #fh5co-about .fh5co-text {
     /*padding: 2em 6em*/
